uf_ulog_macro/tests/ui/fail_registry_non_enum.rs
#[derive(uf_ulog_macro::ULogRegistry)]
struct NotAnEnum;

fn main() {}
